--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ JWT_PRIVATE_KEY=./data/certs/id_rsa
 JWT_PUBLIC_KEY=./data/certs/id_rsa.pub
 JWT_KEY_ID=13fxsex
 AUTH_GRPC_SERVER=:9002
+
+CLIENT_CALLBACK_URL=http://localhost/auth/callback
+
+OAUTH_BASE=http://localhost:3000/oauth/
+VKONTAKTE_CLIENT_ID=7878381
+VKONTAKTE_CLIENT_SECRET=NAynCkwFHmqFEVaM7esg
